# onepiece_bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  onepiece_bot.py  todo.txt
src/: base.hpp  bot.cpp  bot.hpp  database.cpp  database.hpp  fetcher.cpp  fetcher.hpp  logger.hpp  main.cpp  websites.cpp  websites.hpp
